--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,9 @@ h1 {
     width: 100%;
     max-width: 600px;
 }
+
+#accelerometerChart {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
